# GL-CLiC

./: .gitignore  LICENSE  README.md  env.example  evaluate_paraphrase.py  pyproject.toml  train.py
dataset/CoAuthor/raw/: coauthor_paraphrase.csv
scripts/: data_module.py  dataset.py  model.py  trainer.py
utils/: config.py  parse_coauthor_dataset.py  parse_seqxgpt_bench_dataset.py
