[project]
name = "gl-clic"
version = "1.0.0"
description = "Sentence-level AI Detection through coherence and lexical features"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "cefrpy==1.0.1",
    "datasets==3.1.0",
    "fastnlp==1.0.1",
    "httpx==0.27.2",
    "joblib==1.4.2",
    "lexicalrichness==0.5.1",
    "lightning==2.4.0",
    "modelscope==1.20.1",
    "mosec==0.9.0",
    "msgpack-python==0.5.6",
    "nltk==3.9.1",
    "numpy==2.1.3",
    "nvitop==1.5.0",
    "openai==1.55.1",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "protobuf==5.29.1",
    "py-readability-metrics==1.4.5",
    "python-dotenv==1.1.0",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sentencepiece==0.2.0",
    "spacy==3.8.3",
    "torch==2.5.1",
    "tqdm==4.67.0",
    "transformers==4.46.3",
    "wandb==0.19.0",
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "seaborn>=0.13.2",
    "latex>=0.7.0",
    "h5py>=3.14.0",
    "together>=1.2.12",
    "ollama>=0.5.1",
    "tiktoken>=0.9.0",
    "pathspec>=0.12.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
